fix: address horizontal scrolling of related nodes

--- a/data/panel/panel.css
+++ b/data/panel/panel.css
@@ -20,6 +20,9 @@ html, body {
 .theme-link {
 	text-decoration: underline;
 }
+.theme-link.inspect {
+	word-break: break-all;
+}
 
 h1, h2, h3, h4, h5, h6 {
 	font-size: inherit;
